--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,5 @@
   <meta name="author" content="Bruno de Carvalho" />
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  {% include ga.html %}
 </head>
