--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -74,8 +74,7 @@
 /* home */
 #avatar {
   text-align: center;
-  margin-bottom: 1em;
-  padding-bottom: 2.5em;
+  margin-bottom: 2em;
 
   >img {
     width: 192px;
@@ -87,7 +86,8 @@
     font-size: 2em;
     font-weight: 600;
     line-height: 1.2em;
-    margin: 0.8em;
+    margin-top: 0.8em;
+    margin-bottom: 0.4em;
   }
 
   >h2 {
@@ -99,7 +99,7 @@
 
   >h3 {
     font-weight: 300;
-    font-size: 0.9em;
+    font-size: 1.0em;
     color: #999;
     margin: 0.5em;
   }
